<resources>
    <string name="app_name">Intolerapp</string>
    <string name="add_button_text">Add the product</string>
    <string name="rating_button_text">Submit the rating</string>
    <string name="edit_text_name">Product name</string>
    <string name="edit_text_brand">Product brand</string>
    <string name="fructose_text">Fructose (%1$dx Ratings)</string>
    <string name="glucose_text">Glucose (%1$dx Ratings)</string>
    <string name="histamine_text">Histamine (%1$dx Ratings)</string>
    <string name="lactose_text">Lactose (%1$dx Ratings)</string>
    <string name="sucrose_text">Sucrose (%1$dx Ratings)</string>
    <string name="sorbitol_text">Sorbitol (%1$dx Ratings)</string>
    <string name="fructose_rating">New Fructose Rating</string>
    <string name="glucose_rating">New Glucose Rating</string>
    <string name="histamine_rating">New Histamine Rating</string>
    <string name="lactose_rating">New Lactose Rating</string>
    <string name="sucrose_rating">New Sucrose Rating</string>
    <string name="sorbitol_rating">New Sorbitol Rating</string>
    <string name="search_hint">Search products/brands</string>
    <string name="report_text">Are you sure that you want to report the following product?</string>
    <string name="delete_text">Are you sure that you want to delete the following product?</string>
    <string name="rules_title">Rules</string>
    <string name="rule_text">The contents of Intolerapp are unrestrictedly user-generated.\nBaldware does not guarantee the correctness of the displayed information and is also not liable for problems that arise from the use of the app.\nIf you ever experience health problems after eating, seek professional medical advice immediately.</string>
    <string name="start_up_message_title">Welcome</string>
    <string name="start_up_message_text">Thanks for downloading!\n\nIntolerapp provides you with information about the digestibility of thousands of products.\n\nThe more stars a product has the better it is for you.\n\nSimple, right?\n\nYou are also free to add and rate products whenever you want.</string>
    <string name="positive_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="acceptance_button_text">OK</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="rate_app">Rate the app</string>
    <string name="share_app">Share the app</string>
    <string name="firstStartUpFlag">com.baldware.intolerapp.firstStartUpFlag</string>
    <string name="radio_none">None</string>
    <string name="radio_fructose">Fructose</string>
    <string name="radio_glucose">Glucose</string>
    <string name="radio_histamine">Histamine</string>
    <string name="radio_lactose">Lactose</string>
    <string name="radio_sucrose">Sucrose</string>
    <string name="radio_sorbitol">Sorbitol</string>
    <string name="title_settings">Select your main intolerance</string>
    <string name="settings_button_text">Apply selection</string>
    <string name="settings_applied_text">Your selection has been applied</string>
    <string name="settingsFlag">com.baldware.intolerapp.settingsFlag</string>
    <string name="image_content_product">The product</string>
    <string name="non_digestible">Non digestible</string>
    <string name="very_digestible">Very digestible</string>
    <string name="privacy_policy"><b>Datenschutzerklärung für Intolerapp von Baldware - 22.02.2021</b>\nDiese Datenschutzerklärung klärt Sie - den Nutzer - über Art, Umfang und Zweck der Verarbeitung von personenbezogenen Daten innerhalb Intolerapp auf.\n\n<b>Zugriffsrechte</b>\nIntolerapp benötigt folgende (jederzeit in den Einstellungen widerrufbare) Zugriffsrechte:\n\n<b><i>1) Zugriffsrecht auf die Kamera</i></b>\nDieses wird benötigt sobald der Nutzer ein Produkt erstellen/hinzufügen möchte. Fotos die vom Nutzer gemacht werden, dienen nur der Darstellung des erstellten Produktes in der App. Sie werden in einer Datenbank auf Intolerapp-Servern permanent gespeichert und bei Abruf eines Produktes in der App wieder heruntergeladen. Baldware behällt sich vor, diese jederzeit zu löschen. Fotos werden nicht an dritte Übermittelt.\n\n<b><i>2) Zugriffsrecht auf eigene Dateien</i></b>\nDieses wird benötigt sobald der Nutzer ein Produkt erstellen/hinzufügen möchte. Fotos die der Nutzer aus seiner eigenen Gallerie auswählt, dienen nur der Darstellung des erstellten Produktes in der App. Intolerapp editiert die Größe der Fotos, um ein einheitliches Format innerhalb der App zu schaffen. Sie werden in einer Datenbank auf Intolerapp-Servern permanent gespeichert und bei Abruf eines Produktes in der App wieder heruntergeladen. Baldware behällt sich vor, diese jederzeit zu löschen. Fotos werden nicht an dritte Übermittelt.\nDieses Zugriffsrecht wird ausschließlich für die Nutzer-Auswahl von Fotos aus der eigenen Gallerie verwendet. Andere Daten bzw. Dateien werden nicht ausgelesen.\n\n<b><i>3) Zugriffsrecht auf Internet</i></b>\nDieses wird für die allgemeine Benutzung der App benötigt. Es wird verwendet für den lokalen Download der Produkte samt den Nutzer-Bewertungen, für den Upload auf Intolerapp-Server bei der Erstellung von Produkten, für den lokalen Download von Produkt-Bildern, für den Upload von Bildern auf Intolerapp-Server bei der Erstellung von Produkten, für den Upload von Nutzer-Bewertungen auf Intolerapp-Server und für den Upload von Report-Anfragen auf Intolerapp-Server.\n\n<b>Datenerfassung und -speicherung</b>\nDie folgenden Nutzer-bezogenen Daten werden entweder lokal (also auf dem Mobilgerät des Nutzers) oder auf Intolerapp-Servern abgespeichert:\n\n<b><i>1) Lokales Abspeichern einer "Haupt-Intoleranz"</i></b>\nDer Nutzer hat die Möglichkeit in den Einstellungen eine "Haupt-Intoleranz" zu wählen. Dies bietet Vorteile einer besseren, personenbezogeneren Darstellung der Produkte. Die Auswahl der "Haupt-Intoleranz" wird nicht auf Intolerapp-Servern gespeichert.  Sie wird permanent (bis zur Deinstallation der App oder Selektion einer neuen "Haupt-Intoleranz"), lokal auf dem Mobilgerät gespeichert und auch nur in der App verarbeitet. Sie steht weder Baldware noch anderen Nutzern der App zur Verfügung und wird auch nicht an dritte übermittelt.\n\n<b><i>2) Serverseitiges Abspeichern von Produkt-Namen und Hersteller-Namen</i></b>\nDer Nutzer hat die Möglichkeit der Intolerapp-Produktliste Produkte hinzuzufügen. Dafür müssen Name und Hersteller des Produktes angegeben werden. Diese werden auf Intolerapp-Servern permanent gespeichert und sind für sämtliche Nutzer der App jederzeit abrufbar. Baldware behällt sich vor, diese jederzeit zu löschen.\n\n<b><i>3) Serverseitiges Abspeichern von Bildern</i></b>\nDer Nutzer hat die Möglichkeit der Intolerapp-Produktliste Produkte hinzuzufügen. Dafür muss dem Produkt auch ein Foto (das das Produkt zeigt) hinzugefügt werden. Diese Fotos werden auf Intolerapp-Servern permanent gespeichert und sind für sämtliche Nutzer der App jederzeit abrufbar. Baldware behällt sich vor, diese jederzeit zu löschen.\n\n<b><i>4) Serverseitiges Abspeichern von Ratings</i></b>\nDer Nutzer hat die Möglichkeit Produkte aufgrund ihrer Verträglichkeit zu bewerten. Diese Bewertungen erfolgen anonym und werden permanent auf Intolerapp-Servern gespeichert. Sie können von allen App-Nutzern angezeigt werden und stehen damit jedem Nutzer zur Verfügung. Baldware behällt sich vor, diese jederzeit zu löschen.\n\n<b><i>5) Lokales Abspeichern einer "Historie"</i></b>\nDer Nutzer hat die Möglichkeit unter dem Menüpunkt "History" seine bisher erstellten, bewerteten und gelöschten Produkte anzusehen. Diese Produkt-Historie wird permanent (bis zur Deinstallation der App) lokal auf dem Mobilgerät gespeichert und auch nur in der App verarbeitet. Sie wird von Intolerapp genutzt, um erkennen zu können, ob der User ein Produkt bereits bewertet hat, um wiederholte Bewertungen zu vermeiden. Sie wird des weiteren genutzt, um erkennen zu können ob der User ein Produkt, das er löschen möchte, selbst erstellt hat. Auch dies dient nur der Vermeidung von unbefugten Löschungen. Sie steht weder Baldware noch anderen Nutzern der App zur Verfügung und wird auch nicht an dritte übermittelt.\n\nWeitere personenbezogenen Daten wie Name, Anschrift, Telefonnummer oder E-Mail-Adresse werden nicht erfasst, solange diese Angaben nicht freiwillig erfolgen, wie zum Beispiel bei der Kontaktaufnahme über E-Mail.\n\n<b>Nutzung von Diensten Dritter</b>\nIntolerapp verwendet den Dienst Google AdMob um Werbeanzeigen einzublenden. Anzeigen werden basierend auf dem vom Nutzer verwendeten Gerät personalisiert. Der Nutzer kann dies über die Einstellungen seines Geräts deaktivieren.\n\nDer Google Admob Dienst wird von der Firma Google (Google Inc., 1600 Amphitheatre Parkway Mountain View, CA 94043, USA) bereitgestellt. Google ist unter dem Privacy-Shield-Abkommen zertifiziert und bietet hierdurch eine Garantie, das europäische Datenschutzrecht einzuhalten.\nAllgemeine Informationen zum Umgang mit Nutzerdaten findet der Nutzer in der Datenschutzerklärung von Google.\n\n<b>Nutzer-Rechte</b>\nFotos und Produkte können auf Anfrage hin gelöscht werden. In der App besteht auch die Möglichkeit eine Report-Anfrage für ein Produkt durchzuführen, durch langes drücken auf ein Produkt in der Produktliste. Diese Anfrage wird auf Intolerapp-Servern gespeichert und zu einem späteren Zeitpunkt von Baldware bearbeitet.\n\n<b>Widerrufsrecht</b>\nDer Nutzer hat das Recht, erteilte Einwilligungen gem. Art. 7 Abs. 3 DSGVO mit Wirkung für die Zukunft zu widerrufen.\n\n<b>Widerspruchsrecht</b>\nIntolerapp kann nur durch Zustimmung der Datenschutzerklärung uneingeschränkt verwendet werden. Es werden aber nur in bestimmten Fällen personenbezogene Daten abgespeichert (Siehe: Datenerfassung und -speicherung).\nDer Nutzer kann der künftigen Verarbeitung seiner Daten nach Maßgabe des Art. 21 DSGVO jederzeit widersprechen. Der Widerspruch kann insbesondere gegen die Verarbeitung für Zwecke der Direktwerbung erfolgen.\n\n<b>Änderung der Datenschutzerklärung</b>\nIm Zuge der Weiterentwicklung von Intolerapp können Änderungen dieser Datenschutzerkärung erforderlich werden. Baldware informiert den Nutzer in solchen Fällen, empfielt aber dennoch das regelmäßige durchlesen.\n\n<b>Kontaktdaten des Anbieters/Betreibers der App</b>\nAndreas Baldinger - Baldware\nHauptstraße 81c\n4232 Hagenberg\nÖsterreich\n+4367762065386\nbaldinger.andreas98@gmail.com</string>
    <string name="privacy_policy_title">Privacy Policy -\nDatenschutzerklärung</string>
    <string name="privacy_policy_acceptance">I have read and agree to the Privacy Policy -\nIch habe die Datenschutzerklärung gelesen und bin damit einverstanden</string>
</resources>