<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relativeLayout_settings" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_settings"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_settings">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_fructose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_fructose" />

        <RadioButton
            android:id="@+id/radio_glucose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_glucose" />

        <RadioButton
            android:id="@+id/radio_histamine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_histamine" />

        <RadioButton
            android:id="@+id/radio_lactose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_lactose" />

        <RadioButton
            android:id="@+id/radio_sucrose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sucrose" />

        <RadioButton
            android:id="@+id/radio_sorbitol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sorbitol" />
    </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>